--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-571-hexashop
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="C:\Users\sabah\Desktop\static-hm\templatemo_571_hexashop\assets\images\CHEIF BEST WEAR.PNG", width="130px",height="70px">
+                            <img src="C:\Users\sabah\Desktop\PORTFOLIO WEBSITE\static hm\assets\images\CHEIF BEST WEAR.PNG", width="130px",height="70px">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
