--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
 <!--
 
-TemplateMo 571 Hexashop
 
-https://templatemo.com/tm-571-hexashop
 
 -->
     </head>
@@ -52,7 +50,7 @@ https://templatemo.com/tm-571-hexashop
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="C:\Users\sabah\Desktop\PORTFOLIO WEBSITE\static hm\assets\images\CHEIF BEST WEAR.PNG", width="130px",height="70px">
+                            <img src="https://github.com/syed-saad-ali-046/static-hm-index.html/blob/main/assets/images/CHEIF%20BEST%20WEAR.png?raw=true", width="130px",height="70px">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
