--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="C:\Users\sabah\Desktop\PORTFOLIO WEBSITE\templatemo_571_hexashop\assets\images\CHEIF BEST WEAR.png", width="130px",height="70px">
+                            <img src="https://github.com/syed-saad-ali-046/static-hm-index.html/blob/main/assets/images/CHEIF%20BEST%20WEAR.png?raw=true", width="130px",height="70px">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
