--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="left-content">
                         <div class="thumb">
                             <div class="inner-content">
-                                <h4>We Are Cheif Best Wear</h4>
+                                <h4 id="content">We Are Cheif Best Wear</h4>
                                 <span>Awesome, clean &amp; creative</span>
                                 <div class="main-border-button">
                                     <a href="#">Purchase Now!</a>
