--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </head>
     
     <body>
+     <a href='https://www.sideprojectors.com/project/28785/shopping-site' alt='Shopping Site is for sale at @SideProjectors'><img style='position:fixed;z-index:1000;top:-5px; right: 20px; border: 0;' src='https://www.sideprojectors.com/img/badges/badge_2_red.png' alt='Shopping Site is sale at @SideProjectors'></a>
     
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
